# vgi

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  build-wasm-coi.sh  build-wasm-eh.sh  extension_config.cmake  extension_config_wasm.cmake  extension_config_wasm_spatial.cmake  otel-env.sh  test_multiworker.sql  test_partitioned.sql  test_pool_debug.sql  test_sequence.sql  test_simple.sql  vcpkg.json  vgi_log.csv  wasm-build-instructions.md
.beads/: issues.jsonl
.cache/clangd/: compile_commands.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md  batch_index.md  catalog_profiling.md  companion_catalogs.md  container-transport.md  copy_from.md  copy_functions_design.md  copy_to.md  exchange_dedup_pervalue.md  github-transport.md  http-landing-contract.md  launcher-options.md  launcher-protocol.md  launcher-tutorial.md  multi_branch.md  multi_input_table_functions.md  remote_secret_provider_plan.md  remote_secret_provider_status.md  result_cache_compression.md  result_cache_packed_store.md  result_cache_test_gaps.md  sab_transport_abi.md  telemetry.md  wasm-worker-transport.md
patches/: spatial-gdal-3.12-compat.patch
scripts/: __init__.py  bench_buffered_table.py  bootstrap-template.py  header_reach.py  run_tests.py  smoke_buffered_cancel.sh
scripts/stress/: README.md  __init__.py  __main__.py  common.py  launcher.py  pool.py
src/: query_farm_telemetry.cpp  vgi_aggregate_function_impl.cpp  vgi_aggregate_streaming_impl.cpp  vgi_aggregate_window_impl.cpp  vgi_arrow_convert.cpp  vgi_arrow_ipc.cpp  vgi_arrow_utils.cpp  vgi_bind_protocol.cpp  vgi_buffered_table_builders.cpp  vgi_buffered_table_function_impl.cpp  vgi_cached_replay_connection.cpp  vgi_cancel_dispatcher.cpp  vgi_catalog_api.cpp  vgi_catalogs.cpp  vgi_clear_cache.cpp  vgi_client_timing.cpp  vgi_container_runtime.cpp  vgi_cookie_jar.cpp  vgi_copy_from_impl.cpp  vgi_copy_to_impl.cpp  vgi_exchange_cache_key.cpp  vgi_extension.cpp  vgi_function_arguments_function.cpp  vgi_function_connection.cpp  vgi_github.cpp  vgi_github_functions.cpp  vgi_http_client.cpp  vgi_http_compression.cpp  vgi_http_function_connection.cpp  vgi_http_retry.cpp  vgi_input_dedup.cpp  vgi_lateral_batch_operator.cpp  vgi_launcher.cpp  vgi_launcher_cache.cpp  vgi_launcher_internal.cpp  vgi_logging.cpp  vgi_memo_arena.cpp  vgi_multi_scan_rewriter.cpp  vgi_named_pipe.cpp  vgi_oauth.cpp  (+33 more)
src/include/: query_farm_telemetry.hpp  vgi_aggregate_function_impl.hpp  vgi_aggregate_streaming_impl.hpp  vgi_aggregate_window_impl.hpp  vgi_arrow_convert.hpp  vgi_arrow_ipc.hpp  vgi_arrow_utils.hpp  vgi_attach_parameters.hpp  vgi_bind_protocol.hpp  vgi_buffered_table_builders.hpp  vgi_buffered_table_function_impl.hpp  vgi_cache_control.hpp  vgi_cached_replay_connection.hpp  vgi_cancel_dispatcher.hpp  vgi_catalog_api.hpp  vgi_catalog_metadata.hpp  vgi_catalog_rpc.hpp  vgi_catalogs.hpp  vgi_clear_cache.hpp  vgi_client_timing.hpp  vgi_companion_catalogs.hpp  vgi_container_runtime.hpp  vgi_cookie_jar.hpp  vgi_copy_from_impl.hpp  vgi_copy_to_impl.hpp  vgi_exception.hpp  vgi_exchange_cache_key.hpp  vgi_extension.hpp  vgi_function_arguments_function.hpp  vgi_function_connection.hpp  vgi_function_docs.hpp  vgi_github.hpp  vgi_github_functions.hpp  vgi_http_client.hpp  vgi_http_compression.hpp  vgi_http_function_connection.hpp  vgi_http_retry.hpp  vgi_ifunction_connection.hpp  vgi_input_dedup.hpp  vgi_lateral_batch_operator.hpp  (+42 more)
src/include/storage/: vgi_aggregate_function_set.hpp  vgi_catalog.hpp  vgi_catalog_set.hpp  vgi_index_entry.hpp  vgi_index_set.hpp  vgi_macro_set.hpp  vgi_object_counts.hpp  vgi_physical_write.hpp  vgi_scalar_function_set.hpp  vgi_schema_entry.hpp  vgi_schema_set.hpp  vgi_table_entry.hpp  vgi_table_function_set.hpp  vgi_table_set.hpp  vgi_transaction.hpp  vgi_view_set.hpp
src/storage/: vgi_aggregate_function_set.cpp  vgi_catalog.cpp  vgi_catalog_set.cpp  vgi_index_entry.cpp  vgi_index_set.cpp  vgi_macro_set.cpp  vgi_object_counts.cpp  vgi_physical_write.cpp  vgi_scalar_function_set.cpp  vgi_schema_entry.cpp  vgi_schema_set.cpp  vgi_table_entry.cpp  vgi_table_function_set.cpp  vgi_table_set.cpp  vgi_transaction.cpp  vgi_view_set.cpp
test/: README.md  orchard_httpfs_e2e.py  orchard_secret_e2e.py  per_value_disk_test.py  run_cache_crossprocess.sh  run_companion_integration.sh  run_docker_integration.sh  run_http_attach_options_integration.sh  run_http_bearer_integration.sh  run_http_integration.sh  run_http_integration_coverage.sh  run_http_no_compression_integration.sh  run_http_versioned_tables_integration.sh  run_iceberg_integration.sh
test/cpp/: launcher_parity_vectors.hpp  test_container_runtime.cpp  test_http_retry.cpp  test_launcher_e2e.cpp  test_launcher_flock_parity.cpp  test_launcher_internal.cpp  test_launcher_python_parity.cpp  test_main.cpp  test_oauth.cpp  test_sab_conn.cpp  test_sab_e2e.cpp  test_sab_stream.cpp  test_telemetry.cpp  test_transport_detection.cpp  vgi_cache_bench.cpp  vgi_cancel_harness.cpp
test/landing/: workers.toml
test/sql/: quack.test  vgi.test  vgi_cardinality.test  vgi_integration.test  vgi_schema_validation.test  vgi_table_function.test  vgi_table_in_out.test  vgi_worker_pool.test  vgi_worker_subprocess_pool.test
test/sql/integration/: bad_enum.test  connection_string.test  narrow_bind_mismatch.test  projection_pushdown_repro.test  schema_reconcile.test
test/sql/oauth/: catalog_identity.test  oauth_identity.test
test/support/: http_no_compression_server.py  launcher_test_worker.cpp  vgi_sab_native_ring.cpp  vgi_sab_test_stubs.cpp
test/support/sabffi/: Cargo.toml
test/support/sabffi/src/: lib.rs
test/support/sabtable/: Cargo.toml
test/support/sabtable/src/: lib.rs
test_deferred/: cancel_on_limit.test_slow
test_deferred/writable/: cascade.test  comments.test  ctas.test  ddl.test  delete.test  foreign_key.test  index.test  insert.test  merge.test  scale.test  schema.test  view.test
vcpkg_overlay_ports/arrow/: portfile.cmake  usage  vcpkg.json
vcpkg_ports/arrow/: 0007-emscripten-hashing.patch  portfile.cmake  vcpkg.json
(+433 files in other folders)
