[package]
name = "sabtable"
version = "0.0.0"
edition = "2021"
publish = false

# Static lib linked into the C++ vgi_unit_tests binary. Exposes
# `vgi_rust_serve_table_sab_slot(slot)`: runs the real vgi *table-function*
# framework (`vgi::Worker` serving `count_to`) over a native ring slot (via the
# extern "C" vgi_sab_worker_* ops defined in the C++ test), so a C++ client
# driving WebWorkerFunctionConnection and the Rust worker meet over one ring in
# one process.
[lib]
name = "sabtable"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
# default-features=false drops `sqlite` (bundled libsqlite3) and `transport-http`
# (tokio); the worker falls back to the zero-dep FsStorage backend, so the native
# staticlib builds with no heavy/C deps.
vgi = { path = "../../../../vgi-rust/vgi", default-features = false }
# Must match the exact vgi-rpc that `vgi` resolves to (local 0.12.0 via the
# [patch.crates-io] below) so the `OutputCollector` / `Result` / `RpcError`
# types are one crate instance, not two.
vgi-rpc = { version = "0.12.0", default-features = false, features = ["macros", "stream-codec"] }
arrow-array = "59"
arrow-schema = "59"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2

# vgi (via ../../../../vgi-rust) resolves vgi-rpc to the local 0.12.0 checkout;
# point this standalone crate at the same source so both unify to ONE vgi-rpc
# instance. Remove once vgi-rpc 0.12.0 is on crates.io.
[patch.crates-io]
vgi-rpc = { path = "../../../../vgi-rpc-rust/vgi-rpc" }
